Fix bug on GroupList when group items overflow

--- a/src/components/AddGroupButton.css
+++ b/src/components/AddGroupButton.css
@@ -1,3 +1,7 @@
+.container {
+    flex: 0 0 auto;
+}
+
 .container > div {
     display: flex;
     align-items: center;
